--- a/views/stock/index.ejs
+++ b/views/stock/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%-title-%></title>
+    <title>投資指標データ-<%-title-%></title>
     <meta charset="utf-8">
     <%- include ../template/bootstrap.ejs %>
   </head>
