--- a/views/stock/header.ejs
+++ b/views/stock/header.ejs
@@ -1,1 +1,3 @@
-<h2><%-title-%></h2>
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+    <a class="navbar-brand" href="#"><%-title-%></a>
+</nav>
