--- a/views/stock/navbar.ejs
+++ b/views/stock/navbar.ejs
@@ -1,2 +1,10 @@
-<h2><%-sub_title-%></h2>
-<h5><%-description-%></h5>
+<div class="row">
+  <div class="col">
+    <h2><%-sub_title-%></h2>
+  </div>
+</div>
+<div class="row">
+  <div class="col">
+    <h5><%-description-%></h5>
+  </div>
+</div>
