--- a/views/stock/show.ejs
+++ b/views/stock/show.ejs
@@ -6,47 +6,76 @@
     <%- include ../template/bootstrap.ejs %>
   </head>
   <body style="/*margin:0px;*/">
-    <%- include('navbar.ejs', {sub_title: sub_title, description: description}) %>
-    <hr>
-    <%- include header.ejs %>
-    <table border="1">
-      <thead>
-        <tr>
-          <th>日時</th>
-          <th>株価</th>
-          <th>前日比</th>
-          <th>前日比(％)</th>
-          <th>前日終値</th>
-          <th>始値</th>
-          <th>高値</th>
-          <th>安値</th>
-          <th>出来高</th>
-          <th>売買代金(千円)</th>
-          <th>時価総額(百万円)</th>
-          <th>値幅下限</th>
-          <th>値幅上限</th>
-        </tr>
-      </thead>
-      <tbody>
-        <%for(var dairy_key in stock_price_datas){ -%>
-          <tr>
-            <td><%=dateformat(stock_price_datas[dairy_key]['datetime'], 'yyyy/mm/dd');-%></td>
-            <td><%=stock_price_datas[dairy_key]['stock_price']-%></td>
-            <td><%=stock_price_datas[dairy_key]['pre']-%></td>
-            <td><%=stock_price_datas[dairy_key]['pre_per']-%></td>
-            <td><%=stock_price_datas[dairy_key]['pre_close_price']-%></td>
-            <td><%=stock_price_datas[dairy_key]['open_price']-%></td>
-            <td><%=stock_price_datas[dairy_key]['high_price']-%></td>
-            <td><%=stock_price_datas[dairy_key]['low_price']-%></td>
-            <td><%=stock_price_datas[dairy_key]['yield']-%></td>
-            <td><%=stock_price_datas[dairy_key]['trading_price']-%></td>
-            <td><%=stock_price_datas[dairy_key]['market_capitalization']-%></td>
-            <td><%=stock_price_datas[dairy_key]['price_low_limit']-%></td>
-            <td><%=stock_price_datas[dairy_key]['price_upper_limit']-%></td>
-          </tr>
-        <%} -%>
-      </tbody>
-    </table>
-    <%- include footer.ejs %>
+    <div class="container">
+      <%- include('navbar.ejs', {sub_title: sub_title, description: description}) %>
+      <hr>
+      <%- include header.ejs %>
+      <div class="row">
+        <div class="col">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>日時</th>
+                <th>株価</th>
+                <th>前日比</th>
+                <th>前日比(％)</th>
+                <th>前日終値</th>
+                <th>始値</th>
+                <th>高値</th>
+                <th>安値</th>
+                <th>出来高</th>
+                <th>売買代金(千円)</th>
+                <th>時価総額(百万円)</th>
+                <th>値幅下限</th>
+                <th>値幅上限</th>
+              </tr>
+            </thead>
+            <tbody>
+              <%for(var dairy_key in stock_price_datas){ -%>
+                <tr scope="row">
+                  <td><%=dateformat(stock_price_datas[dairy_key]['datetime'], 'yyyy/mm/dd');-%></td>
+                  <td><%=stock_price_datas[dairy_key]['stock_price']-%></td>
+                  <td><%=stock_price_datas[dairy_key]['pre']-%></td>
+                  <td><%=stock_price_datas[dairy_key]['pre_per']-%></td>
+                  <td><%=stock_price_datas[dairy_key]['pre_close_price']-%></td>
+                  <td><%=stock_price_datas[dairy_key]['open_price']-%></td>
+                  <td><%=stock_price_datas[dairy_key]['high_price']-%></td>
+                  <td><%=stock_price_datas[dairy_key]['low_price']-%></td>
+                  <td><%=stock_price_datas[dairy_key]['yield']-%></td>
+                  <td><%=stock_price_datas[dairy_key]['trading_price']-%></td>
+                  <td><%=stock_price_datas[dairy_key]['market_capitalization']-%></td>
+                  <td><%=stock_price_datas[dairy_key]['price_low_limit']-%></td>
+                  <td><%=stock_price_datas[dairy_key]['price_upper_limit']-%></td>
+                </tr>
+              <%} -%>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <div class="row justify-content-end">
+        <div class="col-4">
+          <nav aria-label="Page navigation example">
+            <ul class="pagination">
+              <li class="page-item">
+                <a class="page-link" href="#" aria-label="Previous">
+                  <span aria-hidden="true">&laquo;</span>
+                  <span class="sr-only">Previous</span>
+                </a>
+              </li>
+              <li class="page-item"><a class="page-link" href="#">1</a></li>
+              <li class="page-item"><a class="page-link" href="#">2</a></li>
+              <li class="page-item"><a class="page-link" href="#">3</a></li>
+              <li class="page-item">
+                <a class="page-link" href="#" aria-label="Next">
+                  <span aria-hidden="true">&raquo;</span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+      <%- include footer.ejs %>
+  </div>
   </body>
 </html>
