--- a/views/stock/index.ejs
+++ b/views/stock/index.ejs
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <%- include ../template/bootstrap.ejs %>
   </head>
-  <body style="/*margin:0px;*/">
+  <body>
     <div class="container">
       <%- include('navbar.ejs', {sub_title: sub_title, description: description}) %>
       <hr>
@@ -50,29 +50,48 @@
           </table>
         </div>
       </div>
+
       <div class="row justify-content-end">
         <div class="col-4">
-          <nav aria-label="Page navigation example">
+          <%#ページネーション%>
+          <nav aria-label="...">
             <ul class="pagination">
-              <li class="page-item">
-                <a class="page-link" href="#" aria-label="Previous">
-                  <span aria-hidden="true">&laquo;</span>
-                  <span class="sr-only">Previous</span>
-                </a>
+              <%#ページネーション-PREV%>
+              <li class="page-item <%=pagenation.prev?'':'disabled'-%>">
+                <%if(pagenation.prev){-%>
+                  <a class="page-link" href="/stock/list?page=<%=parseInt(page_option.page)-1-%>&limit=30">&laquo;</a>
+                <%}else{-%>
+                  <span class="page-link">&laquo;</span>
+                <%}-%>
               </li>
-              <li class="page-item"><a class="page-link" href="#">1</a></li>
-              <li class="page-item"><a class="page-link" href="#">2</a></li>
-              <li class="page-item"><a class="page-link" href="#">3</a></li>
-              <li class="page-item">
-                <a class="page-link" href="#" aria-label="Next">
-                  <span aria-hidden="true">&raquo;</span>
-                  <span class="sr-only">Next</span>
-                </a>
+
+              <%#ページネーション-NUMS%>
+              <%for(var key in pagenation.nums){-%>
+                <%if(page_option.page == pagenation.nums[key]){-%>
+                  <li class="page-item active">
+                    <span class="page-link">
+                      <%=pagenation.nums[key]-%>
+                      <span class="sr-only">(current)</span>
+                    </span>
+                  </li>
+                <%}else{-%>
+                  <li class="page-item"><a class="page-link" href="/stock/list?page=<%=pagenation.nums[key]-%>&limit=30"><%=pagenation.nums[key]-%></a></li>
+                <%}-%>
+              <%}-%>
+
+              <%#ページネーション-NEXT%>
+              <li class="page-item <%=pagenation.next?'':'disabled'-%>">
+                <%if(pagenation.next){-%>
+                  <a class="page-link" href="/stock/list?page=<%=parseInt(page_option.page)+1-%>&limit=30">&raquo;</a>
+                <%}else{-%>
+                  <span class="page-link">&raquo;</span>
+                <%}-%>
               </li>
             </ul>
           </nav>
         </div>
       </div>
+
       <%- include footer.ejs %>
     </div>
   </body>
