--- a/views/stock/show.ejs
+++ b/views/stock/show.ejs
@@ -53,8 +53,7 @@
         </div>
       </div>
       <div class="row justify-content-end">
-        <div class="col-4">
-          <nav aria-label="Page navigation example">
+        <div class="col dataTables_paginate">
             <ul class="pagination">
               <li class="page-item">
                 <a class="page-link" href="#" aria-label="Previous">
@@ -72,7 +71,6 @@
                 </a>
               </li>
             </ul>
-          </nav>
         </div>
       </div>
       <%- include footer.ejs %>
