表示件数を100件ページネーションを上下に設置

--- a/views/stock/header.ejs
+++ b/views/stock/header.ejs
@@ -1,3 +1,16 @@
-<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-    <a class="navbar-brand" href="#"><%-title-%></a>
-</nav>
+
+<div class="row justify-content-end">
+  <div class="col-6">
+    <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+        <a class="navbar-brand" href="#"><%-title-%></a>
+    </nav>
+  </div>
+  <div class="col-6">
+    <div class="input-group">
+      <input type="text" class="form-control" placeholder="Search...">
+      <span class="input-group-btn">
+        <button class="btn btn-secondary" type="button">検索</button>
+      </span>
+    </div>
+  </div>
+</div>
