一旦検索欄で投資指標詳細に移動するよう対応
developブランチを切るため接続先修正

--- a/views/stock/show.ejs
+++ b/views/stock/show.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>投資指標データ-<%-title-%></title>
+    <title>投資指標データ-<%-title-%>-<%-sub_title-%></title>
     <meta charset="utf-8">
     <%- include ../template/bootstrap.ejs %>
   </head>
