--- a/views/stock/header.ejs
+++ b/views/stock/header.ejs
@@ -7,10 +7,24 @@
   </div>
   <div class="col-6">
     <div class="input-group">
-      <input type="text" class="form-control" placeholder="Search...">
+      <!--TODO: 一旦証券コード飲み(Search...)-->
+      <input type="text" id="search_text" class="form-control" placeholder="証券コード">
       <span class="input-group-btn">
-        <button class="btn btn-secondary" type="button">検索</button>
+        <button id="search_btn" class="btn btn-secondary" type="button">検索</button>
       </span>
     </div>
   </div>
 </div>
+
+<script>
+// 一旦投資指標詳細へリダイレクトできるようにする
+// TODO: 検索を証券コード(#8750)と名称で検索できるようにする予定
+$("#search_btn").click(function(){
+  var text = $("#search_text").val();
+  if(!isNaN(text)){
+    location.href = `/stock/show_datas?stock_code=${text}`;
+  }else{
+    alert("※半角数字で証券コードを入力");
+  }
+});
+</script>
