終値グラフの追加

--- a/views/stock/header.ejs
+++ b/views/stock/header.ejs
@@ -1,8 +1,8 @@
 
 <div class="row justify-content-end">
   <div class="col-6">
-    <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-        <a class="navbar-brand" href="#"><%-title-%></a>
+    <nav class="navbar navbar-light bg-faded">
+      <h1 class="navbar-brand mb-0"><%-title-%></h1>
     </nav>
   </div>
   <div class="col-6">
