--- a/views/template/bootstrap.ejs
+++ b/views/template/bootstrap.ejs
@@ -1,7 +1,7 @@
 
 <!--Bootstrap読み込み-->
-<link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
+<link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.css">
 
-<script src="/bootstrap/js/jquery-3.2.1.min.js"></script>
+<script src="/lib/bootstrap/js/jquery-3.2.1.min.js"></script>
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>-->
-<script src="/bootstrap/js/bootstrap.min.js"></script>
+<script src="/lib/bootstrap/js/bootstrap.min.js"></script>
