favicon.ico追加及び文言修正

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,10 +4,11 @@
     <link rel="stylesheet" href="/stylesheets/style.css">
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-    <%
-    console.log(stocks[0]);
-    %>
+    <h2>トップページ</h2>
+    <a href="/stock/list">
+      <div style="background-color: #AAF;width: 30%;height: 30%;color: white;">
+        投資指標データ解析
+      </div>
+    </a>
   </body>
 </html>
