--- a/views/stock/show.ejs
+++ b/views/stock/show.ejs
@@ -43,7 +43,7 @@
       <div class="row">
         <div class="col">
           <nav class="navbar navbar-light bg-faded">
-            <h1 class="navbar-brand mb-0">解析データ</h1>
+            <h1 class="navbar-brand mb-0">Analysis</h1>
           </nav>
         </div>
       </div>
