--- a/views/stock/header.ejs
+++ b/views/stock/header.ejs
@@ -2,7 +2,7 @@
 <div class="row justify-content-end">
   <div class="col-6">
     <nav class="navbar navbar-light bg-faded">
-      <h1 class="navbar-brand mb-0"><%-title-%></h1>
+      <a class="navbar-brand" href="/stock/list"><%-title-%></a>
     </nav>
   </div>
   <div class="col-6">
