--- a/views/stock/header.ejs
+++ b/views/stock/header.ejs
@@ -1,31 +1,23 @@
 
-<div class="row justify-content-end">
-  <div class="col-6">
+<div class="row" style="padding-bottom: 10px;">
+  <div class="col">
     <nav class="navbar navbar-light bg-faded">
       <a class="navbar-brand" href="/stock/list"><%-title-%></a>
     </nav>
   </div>
-  <div class="col-6">
-    <div class="input-group">
-      <!--TODO: 一旦証券コード飲み(Search...)-->
-      <input type="text" id="search_text" class="form-control" placeholder="証券コード">
-      <span class="input-group-btn">
-        <button id="search_btn" class="btn btn-secondary" type="button">検索</button>
-      </span>
-    </div>
-  </div>
 </div>
 
-<script>
-// 一旦投資指標詳細へリダイレクトできるようにする
-// TODO: 検索を証券コード(#8750)と名称で検索できるようにする予定
-$("#search_btn").click(function(){
-  var text = $("#search_text").val().replace(/\s+/g, "");
-  if(!isNaN(text) && text!=''){
-    location.href = `/stock/show_datas?stock_code=${text}`;
-  }else{
-    alert("※半角数字で証券コードを入力");
-  }
-  $("#search_text").val("");
-});
-</script>
+<div class="row">
+  <div class="col">
+    <form action="/stock/show_datas" method="get">
+      <div class="input-group">
+        <!--TODO: 一旦証券コードのみ(Search...)-->
+        <input type="text" name="stock_code" class="form-control" placeholder="証券コード">
+        <span class="input-group-btn">
+          <!--<button onclick="serch_click()" class="btn btn-secondary" type="button">検索</button>-->
+          <input class="btn btn-secondary" type="submit" value="検索"/>
+        </span>
+      </div>
+    </form>
+  </div>
+</div>
