--- a/views/stock/header.ejs
+++ b/views/stock/header.ejs
@@ -2,7 +2,7 @@
 <div class="row" style="padding-bottom: 10px;">
   <div class="col">
     <nav class="navbar navbar-light bg-faded">
-      <a class="navbar-brand" href="/stock/list"><%-title-%></a>
+      <a class="navbar-brand" href="/stock/list"><%-title-%> <i class="material-icons">show_chart</i></a>
     </nav>
   </div>
 </div>
