投資指標解析の全体の色合いを調整

--- a/views/stock/header.ejs
+++ b/views/stock/header.ejs
@@ -1,8 +1,8 @@
 
 <div class="row" style="padding-bottom: 10px;">
   <div class="col">
-    <nav class="navbar navbar-light bg-faded">
-      <a class="navbar-brand" href="/stock/list"><%-title-%> <i class="material-icons">show_chart</i></a>
+    <nav class="navbar navbar-light bg-faded" style="background-color:#0F52BC;color:white;">
+      <a class="navbar-brand" href="/stock/list" style="color:inherit;"><%-title-%> <i class="material-icons">show_chart</i></a>
     </nav>
   </div>
 </div>
