--- a/views/stock/template/sp_stock_list.ejs
+++ b/views/stock/template/sp_stock_list.ejs
@@ -8,7 +8,7 @@
           <div class="row">
             <div class="col-10">
                 <div class="card-block">
-                  <h5 class="card-title"> [<%=stocks[key].code-%>] <%=stocks[key].name-%> </h5>
+                  <h5 class="card-title"> <%=stocks[key].name-%><span class="badge badge-default" style="background-color:#A5A5A5;">&nbsp;<%=stocks[key].code-%></span> </h5>
                   <p class="card-text"> <%=stocks[key].market-%> / <%=stocks[key].industry_type-%> </p>
                 </div>
             </div>
