--- a/views/stock/template/stock_history.ejs
+++ b/views/stock/template/stock_history.ejs
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-8 offset-md-2">
-    <table class="table table-striped" style="background-color:#0F52BC;color:#FFF;">
+    <table class="table table-striped" style="background-color:#74A9D6;color:#FFF;">
       <thead>
         <tr>
           <th>最近見た銘柄</th>
