--- a/views/stock/show.ejs
+++ b/views/stock/show.ejs
@@ -71,6 +71,7 @@
         <div class="col">
           <!--解析結果可視化-->
           <div class="view_stock_prices_zero"></div>
+          <div class="view_stock_prices_zero_pattern"></div>
           <script src="/javascripts/stock/final_prices_zero_chart.js"></script>
         </div>
       </div>
