--- a/views/template/bootstrap.ejs
+++ b/views/template/bootstrap.ejs
@@ -1,3 +1,4 @@
+<script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
 
 <!--Bootstrap読み込み-->
 <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.css">
