--- a/views/stock/index.ejs
+++ b/views/stock/index.ejs
@@ -4,6 +4,7 @@
     <title>投資指標データ-<%-title-%></title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <%- include(`${___app_dir}/views/template/all_template.ejs`) %>
     <%- include ../template/bootstrap.ejs %>
     <%- include ../template/material_icons.ejs %>
     <style>
